<resources>
    <string name="app_name">Pro Fixerz</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="orLoginWith">Or Login With</string>
    <string name="createAccount">Create New Account</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="google_sign_in_failed">Sorry, Unable to sign in to google. Please try again</string>
    <string name="sign_in_failed">Sorry, Unable to sign in. Please try again</string>
    <string name="registration_failed">Sorry, Unable to register right now. Please try again</string>
    <string name="something_wrong">Sorry! Something went wrong. Please try login again</string>
</resources>
